<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistanceActivity">

    <TextView
        android:id="@+id/textViewDistanceTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/buttonViewDistance"
        android:textAlignment="center"
        android:textColor="@color/orangeFonce"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textDepartDistance"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/violetFonce"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/violetClair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistanceAConvertir" />

    <TextView
        android:id="@+id/textViewDistanceAConvertir"
        android:layout_width="220dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/valeurAConvertir"
        android:textAlignment="center"
        android:textColor="@color/orangeFonce"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistanceTitre" />

    <RadioGroup
        android:id="@+id/rgDepartDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDepartDistance"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistanceTitre">

        <RadioButton
            android:id="@+id/rbDepartCm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:checked="true"
            android:text="@string/cm"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/m"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/km"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartPouce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/pouce"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartPied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/pied"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartMile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/mile"
            android:textColor="@color/orangeFonce" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewDistanceResultat"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:text="@string/resultat"
        android:textAlignment="center"
        android:textColor="@color/orangeFonce"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDepartDistance" />

    <EditText
        android:id="@+id/textResultatDistance"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/violetFonce"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="@color/violetClair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDistanceResultat" />

    <RadioGroup
        android:id="@+id/rgFinDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textResultatDistance"
        app:layout_constraintTop_toBottomOf="@+id/rgDepartDistance">

        <RadioButton
            android:id="@+id/rbResultatCm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/cm"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:checked="true"
            android:text="@string/m"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/km"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatPouce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/pouce"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatPied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/pied"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatMile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/mile"
            android:textColor="@color/orangeFonce" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</androidx.constraintlayout.widget.ConstraintLayout>