<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureActivity">

    <TextView
        android:id="@+id/textViewTemperatureTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/buttonViewTemperature"
        android:textAlignment="center"
        android:textColor="@color/orangeFonce"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTemperatureAConvertir"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/temperatureSousTitre"
        android:textAlignment="center"
        android:textColor="@color/orangeFonce"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureTitre" />

    <EditText
        android:id="@+id/textDepartTemperature"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/violetFonce"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/violetClair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureAConvertir" />

    <RadioGroup
        android:id="@+id/rgDepartTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDepartTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureAConvertir">

        <RadioButton
            android:id="@+id/rbDepartCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:checked="true"
            android:text="@string/celsius"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartFarhenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/fahrenheit"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbDepartKelvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/kelvin"
            android:textColor="@color/orangeFonce" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewTemperatureResultat"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/resultat"
        android:textAlignment="center"
        android:textColor="@color/orangeFonce"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDepartTemperature" />

    <EditText
        android:id="@+id/textResultatTemperature"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="@color/violetFonce"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/violetClair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureResultat" />

    <RadioGroup
        android:id="@+id/rgFinTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textResultatTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureResultat">

        <RadioButton
            android:id="@+id/rbResultatCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/celsius"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatFarhenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:checked="true"
            android:text="@string/fahrenheit"
            android:textColor="@color/orangeFonce" />

        <RadioButton
            android:id="@+id/rbResultatKelvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/violetFonce"
            android:text="@string/kelvin"
            android:textColor="@color/orangeFonce" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>